# EvalForWAMs

./: .gitignore  ProjectDescription.txt  plan.txt  principle.txt
PTQEval/: README.md  RESULTS_PROVENANCE.txt  pyproject.toml
PTQEval/ptqeval/eval/: _pool_runner.py  aggregator.py  calc_cross_ckpt.py  measure_flops.py  measure_kv_cache.py  monitor.sh  perf_probe.py  profile_ops.py  run_eval.py  run_eval.sh
PTQEval/ptqeval/wam/lingbot_va/: __init__.py  eval_client.py  precompute_text_cond.py  server.py  tasks.py  text_cond_cache.py
PTQEval/ptqeval/wam/lingbot_va/launchers/: launch_client.sh  launch_client_multigpus.sh  launch_server.sh  launch_server_multigpus.sh
PTQEval/ptqeval/wam/lingbot_va/method/viditq/: block.py  check_block.py  check_loader_dispatch.py  check_offload.py  check_ptq_1block.py  check_text_cond_cache.py  collect_calib_videos.py  derive_calib_ptq.py  get_calib_data.py  loader.py  ptq.py  quarot.py  smooth_quant.py
PTQEval/ptqeval/wam/lingbot_va/method/viditq/configs/: runtime_args_w4a4.yaml  runtime_args_w4a8.yaml  runtime_args_w4a8_dynamic.yaml  runtime_args_w4a8_mixed.yaml  runtime_args_w8a8.yaml  runtime_args_w8a8_dynamic.yaml  runtime_args_w8a8_quarot.yaml  runtime_args_w8a8_smooth.yaml  runtime_args_w8a8_static.yaml  runtime_args_w8a8_viditq.yaml  runtime_args_w8a8_viditq_static.yaml  w4a4.yaml  w4a8.yaml  w4a8_dynamic.yaml  w4a8_mixed.yaml  w8a8.yaml  w8a8_quarot.yaml  w8a8_smooth.yaml  w8a8_static.yaml  w8a8_viditq.yaml
PTQEval/ptqeval/wam/lingbot_va/method/viditq/kernel/: setup.py
ViDiT-Q/: README.md  config.yaml
(+181 files in other folders)
