[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ptqeval"
version = "0.1.0"
description = "PTQ evaluation harness for WAMs (lingbot-va, future WAMs) on RoboTwin."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["ptqeval*"]
